[package]
name = "validator-rs"
version = "0.1.2"
edition = "2021"
authors = ["Asnim Ansari <asnimansari@gmail.com>"]
description = "A comprehensive validation library for Rust providing validators for email, URL, mobile phone numbers (150+ countries), credit cards, strings, numbers, and dates"
license = "MIT OR Apache-2.0"
repository = "https://github.com/asnimansari/validator-rs"
documentation = "https://docs.rs/validator-rs"
homepage = "https://github.com/asnimansari/validator-rs"
keywords = ["validation", "validator", "phone", "email", "mobile"]
categories = ["data-structures", "parsing", "text-processing"]
readme = "README.md"

[dependencies]
regex = "1.10"
